# explaneat

./: .gitignore  ANCESTRY_TRACKING.md  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Compositional Explanation.md  DATABASE_SETUP.md  DOCUMENTATION.md  EXPLANATIONS.md  GENOME_EXPLORER_FEATURES.md  GETTING_STARTED.md  LIVE_MONITORING.md  PLOTTING_FIXES.md  README.md  RUNNING_EXPERIMENTS.md  alembic.ini  app.py  backache_config.cfg  backache_experiment_config.cfg  check_database.py  config-file.cfg  debug_annotations.py  genome_explorer_cli.py  iris_config.cfg  package-lock.json  package.json  pyproject.toml  quick_db_check.py  quickstart.py  quickstart_with_db.py  requirements-database.txt  requirements.txt  run_backache_experiment.py  run_backache_experiment_v2.py  run_backache_standard.py  run_iris_experiment.py  run_simple_backache.py  run_simple_experiment.py  run_working_backache.py  (+11 more)
.github/: copilot-instructions.md
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 1c58b632a950_change_all_node_ids_to_strings.py  1e22c8aa8775_add_shap_cache_table.py  3f302fe63174_initial_database_schema.py  4b1cc288c9c5_add_x_data_and_y_data_columns_to_.py  72b5419d429e_refactor_node_splits_to_single_row_per_.py  8f6478941aa_add_annotations_table.py  a8b9c0d1e2f3_add_operations_column_to_explanations.py  b1984296f9f1_add_dataset_tracking_tables.py  (+11 more)
backend/: __init__.py  config.py  init_db.py  manage.py  requirements.txt
backend/models/: dataset.py  (+1 more)
configs/: backache_experiment.json  backache_experiment_ref.json  config-backache
docs/: annotation_collapsing_model.md  annotation_coverage_model.md  annotation_hierarchy_and_splitting.md  backache_dataset_provenance.md  backache_features.md  react_explorer_requirements.md  theoretical_framework.md
examples/: README.md  basic_usage.py  database_example.py  experiment_management.py  genome_analysis_demo.py  genome_explorer_notebook.ipynb
explaneat/: __init__.py  __main__.py  bruno.json  cli.py  package-lock.json  package.json  test.bru
frontend/: package-lock.json  package.json  tailwind.config.js
mcp_server/: __init__.py  __main__.py  helpers.py  rendering.py  server.py
papers/: Supplementary.tex  beyond_intuition.tex
scripts/: compare_backache_sources.py  debug_forward_pass.py  update_backache_features.py
tests/: README.md  conftest.py  test_direct_connections_annotation.py  test_pyvis_layout.py  utils.py
(+262 files in other folders)
