[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "explaneat"
version = "0.1.0"
description = "A suite of tools for creating explanations of neural networks trained using the PropNEAT algorithm"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mike the Merry", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["neat", "neuroevolution", "neural-networks", "explainable-ai", "machine-learning"]
dependencies = [
    # Core dependencies
    "torch>=2.2.0,<2.3.0",
    "neat-python==0.92",
    "numpy>=1.26.0,<2.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    # Visualization
    "matplotlib>=3.3.0",
    "graphviz>=0.16",
    "opencv-python>=4.5.0,<4.12",
    "seaborn>=0.12.0",
    "networkx>=3.0",
    "pyvis>=0.3.0",
    # Data handling
    "pmlb>=1.0.0",
    # Experiment management
    "jsonschema>=3.2.0",
    "psutil>=5.8.0",
    "click>=8.0.0",
    # Optional dependencies for extended functionality
    "GitPython>=3.1.0",
    # Additional dependencies for compatibility
    "scipy>=1.16.0",
    # Database dependencies
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910",
]
git = [
    "GitPython>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/mikethemerry/explaneat"
Repository = "https://github.com/mikethemerry/explaneat"
Issues = "https://github.com/mikethemerry/explaneat/issues"

[tool.setuptools]
packages = ["explaneat"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.cfg", "*.ini"]
explaneat = ["static/react_explorer/**/*"]

